--- a/templates/dashboard/product/product_attribute/form.html
+++ b/templates/dashboard/product/product_attribute/form.html
@@ -70,6 +70,9 @@
             <div class="row">
               {{ form.slug|materializecss }}
             </div>
+            <div class="row">
+              {{ form.is_filter|materializecss }}
+            </div>
           </div>
           <div class="card-action right-align">
             {% if attribute.pk %}
