feature: force single product prices to be shown taxed on listing
Reason behind this is to be able to show the price of a product,
without including a (taxed) price range from variants
as this project is about bulk selling.

--- a/templates/_items.html
+++ b/templates/_items.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load staticfiles %}
-{% load price_range from taxed_prices %}
+{% load price from taxed_prices %}
 {% load product_first_image from product_images %}
 {% load get_thumbnail from product_images %}
 
@@ -17,7 +17,7 @@
       </div>
 
       <div class="panel-footer">
-        {% price_range availability.price_range %}
+        {% price product.price force_taxed=True force_from=product %}
 
         {% if availability.on_sale %}
           <div class="product-list__sale">
